# opengl_example

./: CMakeLists.txt  Dependency.cmake  imgui.ini
shader/: lighting.fs  lighting.vs  per_vectex_color.vs  texture.fs
src/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexLayout.cpp  common.cpp  common.h  main.cpp
